--- a/Suma2Lealtad/Views/Error/Error404.cshtml
+++ b/Suma2Lealtad/Views/Error/Error404.cshtml
@@ -3,8 +3,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row container">
-    <div class="col-md-6 col-center">
-        <h2>Error404 : La página o URL que Ud. solicita no existe o no se encuentra disponible</h2>  
-    </div>
+<div class="jumbotron">
+  <div class="container">
+    <h3>Incidencia en la aplicación</h3>
+    <p>Ha ocurrido una excepción en el sistema, el recurso solicitado no existe.</p>
+    <p>Revise e intente nuevamente.</p>
+  </div>
 </div>
