--- a/Suma2Lealtad/Views/Error/SessionExpired.cshtml
+++ b/Suma2Lealtad/Views/Error/SessionExpired.cshtml
@@ -3,8 +3,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row container">
-    <div class="col-md-6 col-center">
-        <h3>La sesión ha expirado, debe ingresar nuevamente a la aplicación.</h3>  
-    </div>
+<div class="jumbotron">
+  <div class="container">
+    <h3>Sesión Expirada</h3>
+    <p>Hemos detectado inactividad en la aplicación, su sesión ha vencido.</p>
+  </div>
 </div>
