Multithreading en Silverlight, ajustes de GUI para vistas que usan Silverlight

--- a/Suma2Lealtad/Views/Afiliado/Index.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Index.cshtml
@@ -137,7 +137,7 @@
                             <p class="text-left">Paso 1. Escanee el documento de identidad.</p>
                         </div>
 
-                        @*@{Html.RenderPartial("SilverlightEscaner");}*@
+                        @{Html.RenderPartial("SilverlightEscaner");}
 
                         <div class="col-md-12">
                             <p class="text-left">Paso 2. Seleccione el archivo escaneado para subirlo al servidor. </p>
