--- a/Suma2Lealtad/Views/OperacionesImpresora/SilverlightImpresora.cshtml
+++ b/Suma2Lealtad/Views/OperacionesImpresora/SilverlightImpresora.cshtml
@@ -4,6 +4,8 @@
 <div class="col-md-12 col-btn">
     <div class="text-center">
         <a href="javascript:ImprimirTarjeta()" class="btn btn-success btn-md" role="button">Imprimir Tarjeta</a>
+        @*<a href="javascript:ReanudarImpresora()" class="btn btn-success btn-md" role="button">Reanudar Impresora</a>*@
+        @*<a href="javascript:LimpiarErrores()" class="btn btn-success btn-md" role="button">Limpiar Errores Impresora</a>*@
    </div>
 </div>
 <!--// btn btn-success -->
@@ -31,9 +33,15 @@
         }
     }
 
-    //function DetectarImpresora() {
+    //function ReanudarImpresora() {
     //    if (slcontrol3) {
-    //        slcontrol3.Content.MainPage.DetectarImpresora();
+    //        slcontrol3.Content.MainPage.ReanudarImpresora();
+    //    }
+    //}
+
+    //function LimpiarErrores() {
+    //    if (slcontrol3) {
+    //        slcontrol3.Content.MainPage.LimpiarErrores();
     //    }
     //}
 </script>
