--- a/Suma2Lealtad/Views/OperacionesPinPad/Index.cshtml
+++ b/Suma2Lealtad/Views/OperacionesPinPad/Index.cshtml
@@ -14,7 +14,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Afiliado / Operaciones con la Impresora</h3>
+                    <h3 class="panel-title">Afiliado / Operaciones con el PinPad</h3>
                 </div>
 
                 <div class="panel-body">
@@ -27,56 +27,9 @@
                         <div class="col-md-12">
                             <p class="text-left" id="ElementoControl" style="visibility: hidden">ElementoControl</p>
                         </div>
-                        @*<script src="~/Scripts/jquery-2.1.1.min.js"></script>
-                        <script>
-                            $(document).ready(function () {
-                                $("#seccion2").hide();
-                                $("#seccion3").hide();
-                                $("#boton2").hide();
-                                $("#boton3").hide();
-                            });
-
-                            function Siguiente() {
-                                $("#seccion1").hide();
-                                $("#seccion2").show();
-                                $("#boton1").hide();
-                                $("#boton2").show();
-                            }
-
-                            function Siguiente2() {
-                                if (VerificarElementoControl("ElementoControl", "Escaneada") == true) {
-                                    //alert("Error: Debe escanear el documento de identificación para continuar.");
-                                    alert("Error: Debe seleccionar el archivo para cargarlo en el servidor.");
-                                }
-                                    //else if (VerificarElementoControl("ElementoControl", "Seleccionada") == true) {
-                                    //    //alert("Error: Debe seleccionar el archivo para cargarlo en el servidor.");
-                                    //    alert("Error: Debe escanear el documento de identificación para continuar.");
-                                    //}
-                                else if (VerificarElementoControl("ElementoControl", "Seleccionada") == true) {
-                                    $("#seccion2").hide();
-                                    $("#seccion3").show();
-                                    $("#boton2").hide();
-                                    $("#boton3").show();
-                                }
-                                else {
-                                    alert("Error: Debe completar Paso 1 y Paso 2 para continuar.");
-                                }
-                            }
-
-                            function VerificarElementoControl(ElementoControl, ValorDeControl) {
-                                if (document.getElementById(ElementoControl).innerHTML == ValorDeControl)
-                                    return true;
-                                else
-                                    return false;
-                            }
-
-                            function ActualizaElementoControl(ElementoControl, ValorDeControl) {
-                                document.getElementById(ElementoControl).innerHTML = ValorDeControl;
-                            }
-                        </script>
-                        <!-- FIN SECCION PARA VERIFICAR OPERACIONES -->*@
-
+                        
                     <!-- SilverLight -->
+
                     <div class="form-group">
                         <div class="col-md-12 col-btn">
                             <div class="pull-right">
