--- a/Suma2Lealtad/Views/OperacionesPinPad/SilverlightPinPad.cshtml
+++ b/Suma2Lealtad/Views/OperacionesPinPad/SilverlightPinPad.cshtml
@@ -15,7 +15,7 @@
     var InitParams = "idElementoHtmlControl=ElementoControl";
 }
 
-@Helpers.Silverlight(xapPath: "~/ClientBin/SumaPlazas.Dispositivos.PinPad.xap", slObjectId: "sl", customParams: @InitParams, divObjectClass: "col-md-12")
+@Helpers.Silverlight(xapPath: "~/ClientBin/SumaPlazas.Dispositivos.PinPad.xap", slObjectId: "sl", divObjectWidth: "100%", divObjectHeight: "350px", customParams: @InitParams, divObjectClass: "col-md-12")
 
 <script type="text/javascript">
     var slcontrol2 = document.getElementById("sl");
