--- a/Suma2Lealtad/Views/Afiliado/SilverlightEscaner.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/SilverlightEscaner.cshtml
@@ -1,5 +1,4 @@
-﻿@model Suma2Lealtad.Models.AfiliadoWeb
-
+﻿@model Suma2Lealtad.Models.AfiliadoSuma
 <!-- btn btn-success -->
 <div class="col-md-12 col-btn">
     <div class="text-center">
@@ -15,7 +14,7 @@
     InitParams = InitParams + "," + "idElementoHtmlControl=ElementoControl";
 }
 
-@Helpers.Silverlight(xapPath: "~/ClientBin/SumaPlazas.Dispositivos.Escaner.xap", slObjectId: "sl", customParams: @InitParams, divObjectClass: "col-md-12")
+@Helpers.Silverlight(xapPath: "~/ClientBin/SumaPlazas.Dispositivos.Escaner.xap", slObjectId: "sl", divObjectWidth: "100%", divObjectHeight: "250px", customParams: @InitParams, divObjectClass: "col-md-12")
 
 <script type="text/javascript">
     var slcontrol = document.getElementById("sl");
