--- a/SumaPlazas.Dispositivos.Escaner/MainPage.xaml
+++ b/SumaPlazas.Dispositivos.Escaner/MainPage.xaml
@@ -5,10 +5,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" x:Class="SumaPlazas.Dispositivos.Escaner.MainPage"
     mc:Ignorable="d"
-    d:DesignHeight="300" d:DesignWidth="300">
+    d:DesignHeight="300" d:DesignWidth="600">
 
     <Grid x:Name="LayoutRoot" Background="White">
-        <Image x:Name="scannedImage" Height="280" VerticalAlignment="Top" Margin="10,10,0,0" HorizontalAlignment="Left" Width="280" />
-        <sdk:Label x:Name="lblProcesando" HorizontalAlignment="Left" Height="28" Margin="10,10,0,0" VerticalAlignment="Top" Width="104" Content="Escaner Activado..." Visibility="Collapsed" />
+        <Image x:Name="scannedImage" Height="280" VerticalAlignment="Top" Margin="140,10,140,0" />
+        <!--<sdk:Label x:Name="lblProcesando" HorizontalAlignment="Left" Height="28" Margin="10,10,0,0" VerticalAlignment="Top" Width="104" Content="..." Visibility="Collapsed" />-->
+        <ListBox x:Name="listBox1" Margin="10"/>
     </Grid>
 </UserControl>
