--- a/SumaPlazas.Dispositivos.PinPad/MainPage.xaml
+++ b/SumaPlazas.Dispositivos.PinPad/MainPage.xaml
@@ -3,9 +3,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" d:DesignWidth="300" Height="300">
+    mc:Ignorable="d" 
+    d:DesignHeight="400" d:DesignWidth="600">
 
     <Grid x:Name="LayoutRoot" Background="White" >
-        <ListBox x:Name="listBox1" Margin="10,10,10,0" Background="Transparent" Foreground="Black" BorderThickness="1" Height="135" VerticalAlignment="Top"/>
+        <ListBox x:Name="listBox1" Margin="10" Background="Transparent" Foreground="Black" BorderThickness="1"/>
     </Grid>
 </UserControl>
