Afiliado: 1.Atributos de Redes Sociales/2.Códigos de Dirección/3.Persistencia en CustomerInterest,CompanyAffiliate,AffiliateAud.

--- a/Suma2Lealtad/Views/Error/SessionExpired.cshtml
+++ b/Suma2Lealtad/Views/Error/SessionExpired.cshtml
@@ -5,7 +5,8 @@
 
 <div class="jumbotron">
   <div class="container">
-    <h3>Sesión Expirada</h3>
-    <p>Hemos detectado inactividad en la aplicación, su sesión ha vencido.</p>
+    <h4><b>Su sesión ha expirado</b></h4>
+    <p>Disculpe, la sesión ha expirado.</p>
+    <p>Esto usualmente ocurre cuando no ha realizado ninguna acción, es necesario ingresar nuevamente con sus credenciales.</p>
   </div>
 </div>
