--- a/Suma2Lealtad/Views/Afiliado/Create.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Create.cshtml
@@ -96,36 +96,21 @@
                             Sexo :
                         </div>
                         <div class="editor-field col-md-8">
-                            @Html.TextBoxFor(model => model.gender, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.gender)
+                        @Html.DropDownListFor(m => m.gender, 
+                                            new SelectList(Model.SexoOptions, 
+                                                           "id", "sexo", 
+                                                           Model.SexoOptions.Where(m => m.id == 3)) , new { @class="form-control" } )
                         </div>
 
                         <div class="editor-label col-md-4 control-label">
                             Estado Civil :
                         </div>
                         <div class="editor-field col-md-8">
-                            @Html.TextBoxFor(model => model.maritalstatus, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.maritalstatus)
+                        @Html.DropDownListFor(m => m.maritalstatus, 
+                                            new SelectList(Model.MaritalStatusOptions, 
+                                                           "id", "maritalstatus", 
+                                                           Model.MaritalStatusOptions), new { @class="form-control" })
                         </div>
-
-@*                        <div class="editor-label col-md-4 control-label">
-                            Estado Civil :
-                        </div>
-                        <div class="editor-field col-md-8">*@
-
-
-
-@*                            @Html.DropDownListFor(m => m.ContribType, 
-                                            new SelectList(Model.ContribTypeOptions, 
-                                                           "ContribId", "Value", 
-                                                           Model.ContribTypeOptions.First().ContribId))*@
-
-@*                            @Html.DropDownListFor(m => m.SexoType, 
-                                            new SelectList(Model.SexoOptions, 
-                                                           "id", "sexo", 
-                                                           Model.SexoOptions.Where(m => m.id == 3)))*@
-
-                        @*</div>*@
 
                         <div class="editor-label col-md-4 control-label">
                             Telf. Habitación :
@@ -149,6 +134,30 @@
                         <div class="editor-field col-md-8">
                             @Html.TextBoxFor(model => model.phone3, new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.phone3)
+                        </div>
+
+                        <div class="editor-label col-md-4 control-label">
+                            Twitter :
+                        </div>
+                        <div class="editor-field col-md-8">
+                            @Html.TextBoxFor(model => model.twitter_account, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.twitter_account)
+                        </div>
+
+                        <div class="editor-label col-md-4 control-label">
+                            Facebook :
+                        </div>
+                        <div class="editor-field col-md-8">
+                            @Html.TextBoxFor(model => model.facebook_account, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.facebook_account)
+                        </div>
+
+                        <div class="editor-label col-md-4 control-label">
+                            Instagram :
+                        </div>
+                        <div class="editor-field col-md-8">
+                            @Html.TextBoxFor(model => model.instagram_account, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.instagram_account)
                         </div>
 
                     </div>
@@ -246,76 +255,60 @@
                             Sucursal :
                         </div>
                         <div class="editor-field col-md-8">
-                            <select class="form-control" id="select3">
-                                <option>Seleccionar</option>
-                                <option>Prado</option>
-                                <option>Cafetal</option>
-                                <option>Samanes</option>
-                                <option>Avila</option>
-                                <option>Galerias</option>
-                                <option>Lagunita</option>
-                                <option>Cedros</option>
-                                <option>Centro Plazas</option>
-                                <option>Vista Alegre</option>
-                                <option>Cafetal</option>
-                                <option>Los Naranjos</option>
-                                <option>Valle Arriba</option>
-                                <option>El Parral</option>
-                                <option>Veracruz</option>
-                                <option>Los Chaguaramos</option>
-                                <option>Buenaventura</option>
-                                <option>Guatire</option>
-                            </select>
+                        @Html.DropDownListFor(m => m.storeiddelivery, 
+                                            new SelectList(Model.StoreOptions, 
+                                                           "id", "sucursal", 
+                                                           Model.StoreOptions), new { @class="form-control" })
                         </div>
 
                         <div class="editor-label col-md-4 control-label">
                             Estado :
                         </div>
                         <div class="editor-field col-md-8">
-                            <select class="form-control" id="select4">
-                                <option>Seleccionar</option>
-                                <option>Miranda</option>
-                            </select>
+                        @Html.DropDownListFor(m => m.cod_estado, 
+                                            new SelectList(Model.EstadoOptions, 
+                                                           "id", "estado", 
+                                                           Model.EstadoOptions), new { @class="form-control" })
                         </div>
 
                         <div class="editor-label col-md-4 control-label">
                             Ciudad :
                         </div>
                         <div class="editor-field col-md-8">
-                            <select class="form-control" id="select5">
-                                <option>Seleccionar</option>
-                                <option>Caracas</option>
-                            </select>
+                        @Html.DropDownListFor(m => m.cod_ciudad, 
+                                            new SelectList(Model.CiudadOptions, 
+                                                           "id", "ciudad", 
+                                                           Model.CiudadOptions), new { @class="form-control" })
                         </div>
 
                         <div class="editor-label col-md-4 control-label">
                             Municipio :
                         </div>
                         <div class="editor-field col-md-8">
-                            <select class="form-control" id="select6">
-                                <option>Seleccionar</option>
-                                <option>El Hatillo</option>
-                            </select>
+                        @Html.DropDownListFor(m => m.cod_municipio, 
+                                            new SelectList(Model.MunicipioOptions, 
+                                                           "id", "municipio", 
+                                                           Model.MunicipioOptions), new { @class="form-control" })
                         </div>
 
                         <div class="editor-label col-md-4 control-label">
                             Parroquia :
                         </div>
                         <div class="editor-field col-md-8">
-                            <select class="form-control" id="select7">
-                                <option>Seleccionar</option>
-                                <option>El Hatillo</option>
-                            </select>
+                        @Html.DropDownListFor(m => m.cod_parroquia, 
+                                            new SelectList(Model.ParroquiaOptions, 
+                                                           "id", "parroquia", 
+                                                           Model.ParroquiaOptions), new { @class="form-control" })
                         </div>
 
                         <div class="editor-label col-md-4 control-label">
                             Urbanización :
                         </div>
                         <div class="editor-field col-md-8">
-                            <select class="form-control" id="select8">
-                                <option>Seleccionar</option>
-                                <option>La Boyera</option>
-                            </select>
+                        @Html.DropDownListFor(m => m.cod_urbanizacion, 
+                                            new SelectList(Model.ParroquiaOptions, 
+                                                           "id", "parroquia", 
+                                                           Model.UrbanizacionOptions), new { @class="form-control" })
                         </div>
 
                         <div class="editor-label col-md-4 control-label"> <br /> </div>
