--- a/Suma2Lealtad/Views/Role/Index.cshtml
+++ b/Suma2Lealtad/Views/Role/Index.cshtml
@@ -25,7 +25,7 @@
 
                             <tr>
                                 <th>
-                                    @*@Html.DisplayNameFor(model => model.Nombre)*@ Nombre
+                                    Nombre
                                 </th>
                                 <th class="text-center"></th>
                             </tr>
@@ -41,6 +41,9 @@
                                         @Html.DisplayFor(modelItem => item.name)
                                     </td>
                                     <td class="text-right">
+                                        <a href="@Url.Action("Menus", "Role", new { id = item.id })" class="btn btn-primary btn-xs">
+                                            <span class="glyphicon glyphicon-pushpin"></span>
+                                        </a>
                                         <a href="@Url.Action("Edit", "Role", new { id = item.id })" class="btn btn-info btn-xs">
                                             <span class="glyphicon glyphicon-edit"></span>
                                         </a>
