--- a/Suma2Lealtad/Views/Role/Menus.cshtml
+++ b/Suma2Lealtad/Views/Role/Menus.cshtml
@@ -1,7 +1,7 @@
-﻿@model Suma2Lealtad.Models.UserRols
+﻿@model Suma2Lealtad.Models.RoleMenus
 
 @{
-    ViewBag.Title = "UserRols";
+    ViewBag.Title = "RoleMenus";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -13,17 +13,17 @@
 
             <div class="panel panel-default">
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Usuario / Asociar Roles al Usuario</h3>
+                    <h3 class="panel-title">Rol / Asociar Roles al Usuario</h3>
                 </div>
 
 
                 <div class="panel-body">
 
-                    <form action="@Url.Action("CreateRoles", "User")" method="post" class="form-horizontal" role="form">
+                    <form action="@Url.Action("CreateRoles", "Role")" method="post" class="form-horizontal" role="form">
 
                         <div class="form-group">
 
-                            @Html.HiddenFor(model => model.UserID)
+                            @Html.HiddenFor(model => model.RoleID)
 
                             <div class="col-md-10">
 
@@ -36,7 +36,7 @@
                                         <b>Usuario :</b>
                                     </div>
                                     <div class="editor-field col-md-6">
-                                        @Html.DisplayFor(model => model.UserName, new { @class = "form-control" })
+                                        @Html.DisplayFor(model => model.RoleName, new { @class = "form-control" })
                                     </div>
                                 </div>
 
@@ -50,11 +50,11 @@
                                         <b>Roles :</b>
                                     </div>
                                     <div class="editor-field col-md-6">
-                                        @for (int i = 0; i < Model.Roles.Count; i++)
+                                        @for (int i = 0; i < Model.Menus.Count; i++)
                                         {
-                                            @Html.CheckBoxFor(m => m.Roles[i].Checked, new { id = i })
-                                            @Html.HiddenFor(m => m.Roles[i].RolID)
-                                            @Html.DisplayFor(m => m.Roles[i].RolName)
+                                            @Html.CheckBoxFor(m => m.Menus[i].Checked, new { id = i })
+                                            @Html.HiddenFor(m => m.Menus[i].MenuId)
+                                            @Html.DisplayFor(m => m.Menus[i].MenuName)
                                             <br />
                                         }
                                     </div>
@@ -70,7 +70,7 @@
                             <div class="col-md-12 col-btn">
                                 <div class="pull-right">
                                     <input type="submit" class="btn btn-success btn-md" value="Guardar" />
-                                    <a class="btn btn-danger btn-md" href="@Url.Action("Index", "User")">Cancelar</a>
+                                    <a class="btn btn-danger btn-md" href="@Url.Action("Index", "Role")">Cancelar</a>
                                 </div>
                             </div>
                         </div>
