Afiliado : Create/Edit/Index/GenericView/FilterReview

--- a/Suma2Lealtad/Views/Afiliado/Create.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Create.cshtml
@@ -113,7 +113,7 @@
                         </div>
 
                         <div class="editor-label col-md-4 control-label">
-                            Telf. Habitación :
+                            Telf. Casa :
                         </div>
                         <div class="editor-field col-md-8">
                             @Html.TextBoxFor(model => model.phone1, new { @class = "form-control" })
@@ -229,7 +229,7 @@
                     </div>
 
 
-                    <!-- SilverLight -->
+                    <!-- Datos Geográficos/ -->
                     <div class="form-group" id="seccion3">
 
                         <div class="editor-label col-md-4 control-label"> <br /> </div>
