--- a/Suma2Lealtad/Views/Afiliado/Filter.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Filter.cshtml
@@ -33,14 +33,14 @@
                             <span id="someID"></span>
                         </div>
 
-                        <div class="editor-label col-md-4 control-label">
+@*                        <div class="editor-label col-md-4 control-label">
                             Correo Electrónico :
                         </div>
 
                         <div class="editor-field col-md-8">
                             <input type="text" id="email" name="email" maxlength="10" placeholder="correo@ejemplo.com" class="form-control">
                             <span id="someMail"></span>
-                        </div>
+                        </div>*@
 
                         <div class="editor-label col-md-4 control-label"> <br /> </div>
                         <div class="editor-field col-md-8"> <br /> </div>
@@ -48,7 +48,7 @@
                         <div class="form-group">
                             <div class="col-md-12 col-btn">
                                 <div class="pull-right">
-                                    <input type="submit" class="btn btn-success btn-lg" value="Buscar Afiliado" />
+                                    <input type="submit" class="btn btn-success btn-lg" value="Buscar" />
                                 </div>
                             </div>
                         </div>
