2 Commit Local Mauro

--- a/Suma2Lealtad/Views/Afiliado/Filter.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Filter.cshtml
@@ -22,24 +22,24 @@
                     <div class="editor-label col-md-4 control-label"> <br /> </div>
                     <div class="editor-field col-md-8"> <br /> </div>
 
-                    <form action=@Url.Action("Find", "Afiliado") name="form" method="post" onsubmit="return validatePass();">
+                    <form action=@Url.Action("Find", "Afiliado") name="form" method="post" >
 
                         <div class="editor-label col-md-4 control-label">
                             Número de Documento :
                         </div>
 
                         <div class="editor-field col-md-8">
-                            <input type="text" id="numdoc" name="numdoc" value="V-12919906" maxlength="10" placeholder="V-12345678" class="form-control" required>
+                            <input type="text" id="numdoc" name="numdoc" maxlength="10" placeholder="V-12345678" class="form-control">
                             <span id="someID"></span>
                         </div>
 
                         <div class="editor-label col-md-4 control-label">
-                            Correo Electrónico :
+                            Nombre :
                         </div>
 
                         <div class="editor-field col-md-8">
-                            <input type="text" id="email" name="email" maxlength="10" placeholder="correo@ejemplo.com" class="form-control">
-                            <span id="someMail"></span>
+                            <input type="text" id="name" name="name" maxlength="50" placeholder="Nombre" class="form-control">
+                            <span id="someName"></span>
                         </div>
 
                         <div class="editor-label col-md-4 control-label"> <br /> </div>
@@ -70,7 +70,7 @@
     </div>
     <!--// row -->
 
-    <script type="text/javascript">
+@*    <script type="text/javascript">
 
         function validatePass() {
 
@@ -93,7 +93,7 @@
             span.appendChild(document.createTextNode("* Formato de Documento incorrecto. Ejm = V-12345678"));
 
         }
-    </script>
+    </script>*@
 
 </div>
 <!--// container -->
