Afiliado: Ajuste de Create View/Fix Save y SaveChanges.

--- a/Suma2Lealtad/Views/Afiliado/Index.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Index.cshtml
@@ -50,7 +50,7 @@
                                         Afiliado 2
                                     </td>
                                     <td class="text-right">
-                                        <a href="/Interest/Edit/2" class="btn btn-info btn-xs">
+                                        <a href="/Afiliado/Edit/2" class="btn btn-info btn-xs">
                                             <span class="glyphicon glyphicon-edit"></span>
                                         </a>
                                     </td>
@@ -60,7 +60,7 @@
                                         Afiliado 3
                                     </td>
                                     <td class="text-right">
-                                        <a href="/Interest/Edit/3" class="btn btn-info btn-xs">
+                                        <a href="/Afiliado/Edit/3" class="btn btn-info btn-xs">
                                             <span class="glyphicon glyphicon-edit"></span>
                                         </a>
                                     </td>
@@ -70,7 +70,7 @@
                                         Afiliado 4
                                     </td>
                                     <td class="text-right">
-                                        <a href="/Interest/Edit/9" class="btn btn-info btn-xs">
+                                        <a href="/Afiliado/Edit/4" class="btn btn-info btn-xs">
                                             <span class="glyphicon glyphicon-edit"></span>
                                         </a>
                                     </td>
