--- a/Suma2Lealtad/Views/Afiliado/Edit.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Edit.cshtml
@@ -1,103 +1,262 @@
-﻿@model Suma2Lealtad.Models.Afiliacion
-
+﻿@model Suma2Lealtad.Models.AfiliadoSuma
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
 
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
+<div class="container">
 
-    <fieldset>
-        <legend>Afiliacion</legend>
+    <div class="row">
 
-        @Html.HiddenFor(model => model.Id)
+        <div class="col-md-7 col-md-offset-2">
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.IdAfiliado)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.IdAfiliado)
-            @Html.ValidationMessageFor(model => model.IdAfiliado)
-        </div>
+            <div class="panel panel-default">
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.FechaSolicitud)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.FechaSolicitud)
-            @Html.ValidationMessageFor(model => model.FechaSolicitud)
-        </div>
+                <div class="panel-heading clearfix panel-gradient">
+                    <h3 class="panel-title">Afiliado / Editar Datos</h3>
+                </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.FechaAfiliacion)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.FechaAfiliacion)
-            @Html.ValidationMessageFor(model => model.FechaAfiliacion)
-        </div>
+                <div class="panel-body">
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.IdSucursal)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.IdSucursal)
-            @Html.ValidationMessageFor(model => model.IdSucursal)
-        </div>
+                    @* Para acceder a las operaciones con Silverlight *@
+                    <div class="form-group">
+                        <div class="col-md-12 col-btn">
+                            <div class="pull-right">
+                                <a id="boton5" href="@Url.Action("OperacionesImpresora", "Afiliado")" class="btn btn-warning btn-md" role="button">OperacionesImpresora</a>
+                                <a id="boton6" href="@Url.Action("OperacionesPinPad", "Afiliado")" class="btn btn-warning btn-md" role="button">OperacionesPinPad</a>
+                            </div>
+                        </div>
+                    </div>
+                    @* Fin Para acceder a las operaciones con Silverlight *@
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Estatus)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Estatus)
-            @Html.ValidationMessageFor(model => model.Estatus)
-        </div>
+                    @using (Html.BeginForm())
+                    {
+                     
+                        @Html.AntiForgeryToken()
+                        @Html.ValidationSummary(true)
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.IdRazonBloqueo)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.IdRazonBloqueo)
-            @Html.ValidationMessageFor(model => model.IdRazonBloqueo)
-        </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.IdRazonRechazo)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.IdRazonRechazo)
-            @Html.ValidationMessageFor(model => model.IdRazonRechazo)
-        </div>
+                        @Html.HiddenFor(model => model.id)
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.IdOcupacion)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.IdOcupacion)
-            @Html.ValidationMessageFor(model => model.IdOcupacion)
-        </div>
+                        <div class="form-group" id="seccion1">
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.IdNacionalidad)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.IdNacionalidad)
-            @Html.ValidationMessageFor(model => model.IdNacionalidad)
-        </div>
+                            <div class="editor-label col-md-4 control-label">
+                                Correo Electrónico :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.email, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.email)
+                            </div>
 
-        <p>
-            <input type="submit" value="Save" />
-        </p>
-    </fieldset>
-}
+                            @Html.HiddenFor(model => model.type)
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+                            <div class="editor-label col-md-4 control-label">
+                                Número Documento :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.docnumber, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.docnumber)
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Primer Nombre :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.name, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.name)
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Segundo Nombre :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.name2, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.name2)
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Primer Apellido :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.lastname1, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.lastname1)
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Segundo Apellido :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.lastname2, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.lastname2)
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Fecha de Nacimiento :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.birthdate, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.birthdate)
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Sexo :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.gender, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.gender)
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Estado Civil :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.maritalstatus, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.maritalstatus)
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Telf. Habitación :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.phone1, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.phone1)
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Telf. Oficina :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.phone2, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.phone2)
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Telf. Celular :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.phone3, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.phone3)
+                            </div>
+
+                        </div>
+
+                        <div class="form-group" id="seccion2">
+                            @* poner aqui la foto escaneada *@
+                            <h1>Aqui va la foto del documento (thumbnail)</h1>
+                        </div>
+
+                        <div class="form-group" id="seccion3">
+
+                            <div class="editor-label col-md-4 control-label">
+                                Ocupación :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.occupation, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.occupation)
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Nacionalidad :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.nationality, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.nationality)
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Sucursal :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                <select class="form-control" id="select3">
+                                    <option>Seleccionar</option>
+                                    <option>Prado</option>
+                                    <option>Cafetal</option>
+                                    <option>Samanes</option>
+                                    <option>Avila</option>
+                                    <option>Galerias</option>
+                                    <option>Lagunita</option>
+                                    <option>Cedros</option>
+                                    <option>Centro Plazas</option>
+                                    <option>Vista Alegre</option>
+                                    <option>Cafetal</option>
+                                    <option>Los Naranjos</option>
+                                    <option>Valle Arriba</option>
+                                    <option>El Parral</option>
+                                    <option>Veracruz</option>
+                                    <option>Los Chaguaramos</option>
+                                    <option>Buenaventura</option>
+                                    <option>Guatire</option>
+                                </select>
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Estado :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                <select class="form-control" id="select4">
+                                    <option>Seleccionar</option>
+                                    <option>Miranda</option>
+                                </select>
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Ciudad :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                <select class="form-control" id="select5">
+                                    <option>Seleccionar</option>
+                                    <option>Caracas</option>
+                                </select>
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Municipio :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                <select class="form-control" id="select6">
+                                    <option>Seleccionar</option>
+                                    <option>El Hatillo</option>
+                                </select>
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Parroquia :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                <select class="form-control" id="select7">
+                                    <option>Seleccionar</option>
+                                    <option>El Hatillo</option>
+                                </select>
+                            </div>
+
+                            <div class="editor-label col-md-4 control-label">
+                                Urbanización :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                <select class="form-control" id="select8">
+                                    <option>Seleccionar</option>
+                                    <option>La Boyera</option>
+                                </select>
+                            </div>
+
+
+                        </div>
+
+                    }
+
+                </div>
+                <!--// panel-body -->
+
+            </div>
+            <!--// panel -->
+
+        </div>
+        <!--// columns -->
+
+    </div>
+    <!--// row -->
+
 </div>
+<!--// container -->
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
