--- a/Suma2Lealtad/Views/Home/Login.cshtml
+++ b/Suma2Lealtad/Views/Home/Login.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@*<form name="login" method="post" action="@Url.Action("Index","Home")" class="form-horizontal" role="form">*@
+<form name="login" method="post" action="@Url.Action("Index","Home")" class="form-horizontal" role="form">
 
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
@@ -29,7 +29,7 @@
         @*Para pruebas de NA*@
         @*<form name="login" action="@Url.Action("Index","SaldosMovimientos")" class="form-horizontal" role="form">*@
         @*<form name="login" action="@Url.Action("Index","OperacionesImpresora")" class="form-horizontal" role="form">*@
-        <form name="login" action="@Url.Action("Index", "OperacionesPinPad")" class="form-horizontal" role="form">
+        @*<form name="login" action="@Url.Action("Edit", "Afiliado")" class="form-horizontal" role="form">*@
 
 
     <div class="form-group">
@@ -41,7 +41,7 @@
         </div>
                         
         <div class="editor-field col-md-4" style="margin-top: 80px;" aria-required="true">
-            <input class="form-control" placeholder="Usuario" name="username" value="llamarca" type="text" required="">
+            <input class="form-control" placeholder="Usuario" name="username" value="ddepablos" type="text" required="">
             <br>
             <input class="form-control" placeholder="Contraseña" name="password" value="123456" type="password" required="">
             <br>
